--- a/app/web/templates/confirm.html
+++ b/app/web/templates/confirm.html
@@ -156,6 +156,7 @@
                             {% endmacro %}
 
                             <form id="confirm-form" action="{{ url_for('save_plan') }}" method="post">
+                                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
                                 {# plan_id は新しいレコードとして登録するので、フォームに含めないようにする #}
                                 <input type="hidden" name="patient_id" value="{{ patient_data.patient_id }}">
                                 <input type="hidden" name="plan_id" value="">
