--- a/app/web/templates/login.html
+++ b/app/web/templates/login.html
@@ -21,7 +21,21 @@
         </ul>
         {% endif %}
         {% endwith %}
+        <!-- <form method="POST">
+            <div class="form-group">
+                <label for="username">ユーザー名</label>
+                <input type="text" name="username" id="username" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <label for="password">パスワード</label>
+                <input type="password" name="password" id="password" class="form-control" required>
+            </div>
+            <button type="submit" class="submit-btn">ログイン</button>
+        </form> -->
+
+
         <form method="POST">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
             <div class="form-group">
                 <label for="username">ユーザー名</label>
                 <input type="text" name="username" id="username" class="form-control" required>
