--- a/app/web/templates/signup.html
+++ b/app/web/templates/signup.html
@@ -19,6 +19,7 @@
         </ul>{% endif %}
         {% endwith %}
         <form method="POST">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
             <div class="form-group">
                 <label for="username">新規ユーザー名</label>
                 <input type="text" name="username" id="username" class="form-control" required>
